<resources>
    <string name="app_name">My Application</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrate">Registrate</string>
    <string name="Aún_No_pregunta">Aún no tienes cuenta? Regístrate !</string>
    <string name="password">Contraseña</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="volver">Volver</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="nombre_de_la_actividad">Nombre de la Actividad</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="activitats_recents">Activitats recents</string>
    <string name="afegeix">Añadir</string>
    <string name="home">Home</string>
    <string name="ajustes">Ajustes</string>
    <string name="patata">patata</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anadir_actividad">Añadir Actividad</string>
    <string name="Crear">crear</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear">Crear</string>
    <string name="informa_intro_nombre">Nombre de la actividad</string>
    <string name="descripci_n">Descripción</string>
    <string name="duraci_n">Duración</string>
    <string name="distancia">Distancia</string>
    <string name="settings">Ajustes</string>
    <string name="castellano">Castellano</string>
    <string name="catal">Català</string>
    <string name="english">English</string>
</resources>