<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu_registrarse">

    <androidx.cardview.widget.CardView
        android:id="@+id/isPantalla"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:foregroundGravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_marginTop="20dp"
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:src="@drawable/logo_app_blue"
                >
            </ImageView>

            <EditText
                android:id="@+id/IntroduceUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_de_usuario"
                >

            </EditText>

            <EditText
                android:id="@+id/IntroduceContraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                >
            </EditText>

            <Button
                android:id="@+id/Adelante"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:text="@string/registrate"
                android:backgroundTint="@color/botones1"
                >
            </Button>
            <Button
                android:id="@+id/VolverRg"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/volver"
                android:backgroundTint="@color/black"
                >
            </Button>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>