<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradadorecycle"> <androidx.cardview.widget.CardView
    android:id="@+id/cardHeader"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    app:cardBackgroundColor="@color/azul"
    app:cardElevation="4dp"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anadir_actividad"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="30dp"
        android:textColor="@color/white" />
</androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/inf1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardHeader"
        android:text="@string/informa_intro_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        >
    </TextView>

    <EditText
        android:id="@+id/nombreActividad"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/inf1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info2"
        app:layout_constraintTop_toBottomOf="@id/nombreActividad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/descripci_n"
        android:textStyle="bold"
        android:textSize="18sp"
        >

    </TextView>

    <EditText
        android:id="@+id/descricpcionActividad"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/info2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

    </EditText>

    <TextView
        android:id="@+id/info3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/descricpcionActividad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/duraci_n"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        >
    </TextView>

    <LinearLayout
        android:id="@+id/layoutPickers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/info3"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Días"
                android:textSize="15sp" />
            <NumberPicker
                android:id="@+id/pickerDias"
                android:layout_width="wrap_content"
                android:layout_height="130dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginHorizontal="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Horas"
                android:textSize="15sp" />
            <NumberPicker
                android:id="@+id/pickerHoras"
                android:layout_width="wrap_content"
                android:layout_height="130dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Minutos"
                android:textSize="15sp" />
            <NumberPicker
                android:id="@+id/pickerMinutos"
                android:layout_width="wrap_content"
                android:layout_height="130dp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/info4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutPickers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/distancia"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        >
    </TextView>

    <NumberPicker
        android:id="@+id/pickerDistancia"
        app:layout_constraintTop_toBottomOf="@id/info4"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </NumberPicker>


    <Button
        android:id="@+id/aceptarCrear"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/crear"
        android:backgroundTint="@color/verde"
        android:layout_marginBottom="10dp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@id/cancelarCrear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancelarCrear"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/cancelar"
        android:backgroundTint="@color/rojo"
        android:layout_marginBottom="20dp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>