<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/General1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:foregroundGravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_marginTop="20dp"
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:src="@drawable/logo_app_blue"
                >

            </ImageView>
            <Button
                android:id="@+id/IniciarSesion"
                android:layout_marginTop="10dp"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:text="@string/iniciar_sesion"
                android:backgroundTint="@color/botones1"
                >
            </Button>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Aún_No_pregunta"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                >
            </TextView>

            <Button
                android:layout_marginTop="7dp"
                android:id="@+id/Registrate"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:text="@string/registrate"
                android:backgroundTint="@color/botones1">

            </Button>

        </LinearLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
