<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment_settings"
    android:background="@drawable/degradadorecycle">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/headerAjustes"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/azul">

            <TextView
                android:id="@+id/textAjustes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/switchVoice"
            app:layout_constraintTop_toBottomOf="@id/headerAjustes">

            <Button
                android:id="@+id/botoCatala"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/catal"></Button>

            <Button
                android:id="@+id/botoCastellano"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/castellano"></Button>

            <Button
                android:id="@+id/botoEnglish"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/english"></Button>

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchVoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Utilitzar Veu"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/toggleGroup"
            app:layout_constraintBottom_toTopOf="@id/botoStats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/botoStats"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="Estadístiques"
            app:layout_constraintTop_toBottomOf="@id/headerAjustes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>